changed to Travel Diaries

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,12 +1,12 @@
 h1 a {
-    color: #FCA205;
+    color: #426fc9;
     font-family: 'Lobster';
 }
 body {
     padding-left: 15px;
 }
 .page-header {
-    background-color: #ff9400;
+    background-color: #2b4987;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
